# GlobalLogicTest_v1

./: .gitignore  CMakeLists.txt  README.md
child_app/: CMakeLists.txt
child_app/app/: CMakeLists.txt
child_app/app/src/: main.cpp
common/inc/: help.h
common/src/: help.cpp
parent_app/: CMakeLists.txt
parent_app/app/: CMakeLists.txt
parent_app/app/src/: main.cpp
